# contia365_server

./: .env.example  .gitignore  README_AI_MODELO_ANALYSIS.md  README_ENHANCED_EXTRACTION.md  SPAIN_TAX_VERIFICATION.md  pyproject.toml  requirements.txt
app/: main.py
app/models/: __init__.py  accounting.py  census_data.py  onboarding.py  tax_dashboard.py  tax_engine.py  tax_models.py
app/repos/: tax_engine_repo.py
app/routes/: __init__.py  auth.py  census_data.py  ledger.py  ocr.py  onboarding.py  tax_calculation.py  tax_dashboard.py  tax_engine.py  voucher.py
app/services/: ai_modelo_analyzer.py  census_data_service.py  invoice_extractor.py  modelo_mapping_service.py  tax_calculation_service.py  tax_classification_service.py  tax_engine_service.py
app/utils/: period_guard.py
